--- a/app/src/main/res/layout/activity_forms2b_after_test.xml
+++ b/app/src/main/res/layout/activity_forms2b_after_test.xml
@@ -292,7 +292,7 @@
                             android:focusable="false"
                             android:hint="DD/MM/YYYY"
                             app:dateFormat="dd-MM-yyyy"
-                            app:maxDate="CR_DATE" />
+                            app:minDate="CR_DATE" />
 
                     </LinearLayout>
 
@@ -464,7 +464,7 @@
                                 android:focusable="false"
                                 android:hint="DD/MM/YYYY"
                                 app:dateFormat="dd-MM-yyyy"
-                                app:maxDate="CR_DATE" />
+                                app:minDate="CR_DATE" />
 
                         </LinearLayout>
 
