--- a/app/src/main/res/layout/activity_form2b_test.xml
+++ b/app/src/main/res/layout/activity_form2b_test.xml
@@ -311,9 +311,9 @@
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
                     android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="END"
+                    android:text="End Interview"
                     android:textColor="@color/white"
-                    android:textSize="24sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <Button
@@ -324,9 +324,9 @@
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
                     android:onClick="@{() -> callback.BtnContinue()}"
-                    android:text="SAVE"
+                    android:text="Save &amp; Continue"
                     android:textColor="@color/white"
-                    android:textSize="24sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <Button
@@ -338,7 +338,8 @@
                     android:background="@android:color/holo_green_dark"
                     android:onClick="@{() -> callback.addTest()}"
                     android:text="Add Test"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
