--- a/app/src/main/res/layout/activity_f1_section04.xml
+++ b/app/src/main/res/layout/activity_f1_section04.xml
@@ -35,7 +35,7 @@
                 android:text="@string/Section4" />
 
             <!--RS41 - Radio-->
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
 
                 android:id="@+id/RS41cv"
                 style="@style/cardView">
@@ -71,10 +71,10 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <!--RS42 - Radio - Multiple-->
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/RS42cv"
                 style="@style/cardView">
 
@@ -242,10 +242,10 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <!--RS43 - Radio-->
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/RS43cv"
                 style="@style/cardView">
 
@@ -282,10 +282,10 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <!--RS44 - Radio - Multiple-->
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/RS44cv"
                 style="@style/cardView">
 
@@ -487,10 +487,10 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <!--RS45 - Radio-->
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/RS45cv"
                 style="@style/cardView">
 
@@ -533,10 +533,10 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <!--RS46 - Date Picker-->
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/RS46cv"
                 style="@style/cardView">
 
@@ -564,10 +564,10 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <!--RS47 - EditText-->
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/RS47cv"
                 style="@style/cardView">
 
@@ -597,10 +597,10 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <!--RS48 - Radio-->
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/RS48cv"
                 style="@style/cardView">
 
@@ -643,7 +643,7 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
 
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
