--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
 
     <data>
@@ -16,7 +15,7 @@
             type="edu.aku.hassannaqvi.rsvstudy.ui.other.FormType" />
     </data>
 
-    <android.support.design.widget.CoordinatorLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -131,7 +130,7 @@
                                 android:layout_marginEnd="10dp"
                                 android:orientation="horizontal">
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:layout_width="0dp"
                                     android:layout_height="120dp"
                                     android:layout_margin="@dimen/cardview_compat_inset_shadow"
@@ -157,9 +156,9 @@
 
                                     </RelativeLayout>
 
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:layout_width="0dp"
                                     android:layout_height="120dp"
                                     android:layout_margin="@dimen/cardview_compat_inset_shadow"
@@ -185,7 +184,7 @@
 
                                     </RelativeLayout>
 
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
 
                             </LinearLayout>
@@ -206,7 +205,7 @@
                                 android:layout_marginEnd="10dp"
                                 android:orientation="horizontal">
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:id="@+id/uploadData"
                                     android:layout_width="0dp"
                                     android:layout_height="120dp"
@@ -241,9 +240,9 @@
 
                                     </RelativeLayout>
 
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:id="@+id/databaseBtn"
                                     android:layout_width="0dp"
                                     android:layout_height="120dp"
@@ -277,7 +276,7 @@
 
                                     </RelativeLayout>
 
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
 
                             </LinearLayout>
@@ -290,7 +289,7 @@
 
         </LinearLayout>
 
-    </android.support.design.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 </layout>
