--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -36,7 +36,7 @@
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_sync_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,12 +66,12 @@
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_upload_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
-                tools:listitem="@layout/sync_list_adapter"></android.support.v7.widget.RecyclerView>
+                tools:listitem="@layout/sync_list_adapter"></androidx.recyclerview.widget.RecyclerView>
 
             <TextView
                 android:id="@+id/no_data_item"
