--- a/app/src/main/res/layout/activity_f1_section031.xml
+++ b/app/src/main/res/layout/activity_f1_section031.xml
@@ -280,7 +280,8 @@
                     android:visibility='@{RS34b.checked ? View.GONE : View.VISIBLE }'>
 
                     <!--RS035 Radio Button-->
-                    <android.support.v7.widget.CardView style="@style/cardView">
+                    <android.support.v7.widget.CardView
+                        style="@style/cardView">
 
                         <LinearLayout
                             android:layout_width="match_parent"
