--- a/app/src/main/res/layout/activity_form2b_test.xml
+++ b/app/src/main/res/layout/activity_form2b_test.xml
@@ -210,9 +210,10 @@
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:hint="@string/Especify"
-                                app:mask="##"
-                                app:maxValue="90"
-                                app:minValue="10"
+                                app:mask="###.##"
+                                app:maxValue="100.00"
+                                app:minValue="000.00"
+                                app:pattern="^(\\d{3,3}\\.\\d{2,2})$"
                                 app:type="range" />
 
                         </LinearLayout>
@@ -241,9 +242,10 @@
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:hint="@string/Especify"
-                                app:mask="##"
-                                app:maxValue="90"
-                                app:minValue="10"
+                                app:mask="###.##"
+                                app:maxValue="100.00"
+                                app:minValue="000.00"
+                                app:pattern="^(\\d{3,3}\\.\\d{2,2})$"
                                 app:type="range" />
 
                         </LinearLayout>
@@ -272,9 +274,10 @@
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:hint="@string/Especify"
-                                app:mask="##"
-                                app:maxValue="90"
-                                app:minValue="10"
+                                app:mask="###.##"
+                                app:maxValue="100.00"
+                                app:minValue="000.00"
+                                app:pattern="^(\\d{3,3}\\.\\d{2,2})$"
                                 app:type="range" />
 
 
